--- a/jishu.css
+++ b/jishu.css
@@ -1,6 +1,7 @@
 .gradcol{
     
     background: linear-gradient(-45deg,#EE7752,#E73C73,#23A6D5,#23D5AB);
+    overflow-x: hidden;
 
 }
 /* navbar css begin*/
