--- a/contactme.css
+++ b/contactme.css
@@ -19,6 +19,7 @@
 .gradcol{
     
     background: linear-gradient(-45deg,#EE7752,#E73C73,#23A6D5,#23D5AB);
+    overflow-x: hidden;
     
 }
 .slogan{
